<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.jsillanpaa.drawinput"
    android:layout_width="fill_parent"
    android:layout_height="245dp"
    android:background="@color/drawinput_gui_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radiogroup_inputmode"
            android:layout_width="@dimen/col_width"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <com.jsillanpaa.drawinput.widgets.InputModeToggleButton
                android:id="@+id/button_small_abc"
                style="@style/vertical_inputmode_button_group"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onSmallAbcClicked"
                android:textOff="@string/button_small_abc_text"
                android:textOn="@string/button_small_abc_text" />

            <com.jsillanpaa.drawinput.widgets.InputModeToggleButton
                android:id="@+id/button_big_abc"
                style="@style/vertical_inputmode_button_group"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:enabled="false"
                android:onClick="onBigAbcClicked"
                android:textOff="@string/button_big_abc_text"
                android:textOn="@string/button_big_abc_text" />

            <com.jsillanpaa.drawinput.widgets.InputModeToggleButton
                android:id="@+id/button_numbers"
                style="@style/vertical_inputmode_button_group"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onNumbersClicked"
                android:textOff="@string/button_123_text"
                android:textOn="@string/button_123_text" />

            <com.jsillanpaa.drawinput.widgets.InputModeToggleButton
                android:id="@+id/button_special_chars"
                style="@style/vertical_inputmode_button_group"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onSpecialCharsClicked"
                android:textOff="@string/button_special_chars_text"
                android:textOn="@string/button_special_chars_text" />
        </RadioGroup>

        <com.jsillanpaa.drawinput.DrawInputCanvas
            android:id="@+id/canvas"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1.0" />

        <LinearLayout
            android:layout_width="@dimen/col_width"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_erase"
                style="@style/button_erase_style"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:enabled="false"
                android:onClick="onEraseClicked" 
                android:longClickable="true"
                />

            <Button
                android:id="@+id/button_space"
                style="@style/button_space_style"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onSpaceClicked"
                />

            <Button
                android:id="@+id/button_enter"
                style="@style/button_enter_style"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onEnterClicked"
                />

            <Button
                android:id="@+id/button_go"
                style="@style/vertical_button_group"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onGoClicked"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_left"
            style="@style/button_left_style"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:enabled="false"
            android:onClick="onLeftClicked"
            />

        <Button
            android:id="@+id/button_clear"
            style="@style/button_clear_style"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:enabled="false"
            android:onClick="onClearClicked"
            />

        <Button
            android:id="@+id/button_accept"
            style="@style/horizontal_button_group"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="onAcceptClicked"
            android:enabled="false"
            android:text="@string/button_accept_nochar" />

        <Button
            android:id="@+id/button_right"
            style="@style/button_right_style"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:enabled="false"
            android:onClick="onRightClicked"
            />
    </LinearLayout>

</LinearLayout>